--- a/colormyviews/build.gradle
+++ b/colormyviews/build.gradle
@@ -7,7 +7,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.example.aboutme"
+        applicationId "com.android.colormyviews"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
@@ -26,7 +26,6 @@ android {
     dataBinding{
         enabled true
     }
-
 }
 
 dependencies {
@@ -36,6 +35,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
